Verify sign up with empty required fields

--- a/Practice Basics of Playwright.csproj
+++ b/Practice Basics of Playwright.csproj
@@ -37,7 +37,7 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Test Data\SignUp_TestData.json">
+    <None Update="Test Data\SignupData.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
