--- a/Practice Basics of Playwright.csproj
+++ b/Practice Basics of Playwright.csproj
@@ -34,7 +34,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Tests\SignUpTests.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Test Data\SignInData.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Test Data\SignupData.json">
